--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,182 +1,149 @@
 [
   {
-    "id": 101,
-    "grupo": "aty",
-    "titulo": "Portal Web Institucional",
-    "cliente": "Institución Gubernamental",
-    "periodo": "Sep 2024 - Mar 2025",
-    "descripcion": "Gestión, mantenimiento y actualizaciones de seguridad del sitio web principal de la institución.",
-    "stack": ["Linux", "Apache", "Git", "PHP", "Laravel", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery"],
-    "link": "https://transporteyucatan.org.mx/",
-    "fecha_inicio": "2024-09-01",
-    "name": "pagina ATY"
+    "id": "aty",
+    "titulo_seccion": "Experiencia Institucional",
+    "proyectos": [
+      {
+        "id": 101,
+        "titulo": "Portal Web Institucional",
+        "cliente": "Institución Gubernamental",
+        "periodo": "Sep 2024 - Mar 2025",
+        "descripcion": "Modernización integral del ecosistema digital. Implementación de protocolos de seguridad y optimización de carga, reduciendo la latencia en un 40% para miles de usuarios concurrentes.",
+        "stack": ["Linux", "Apache", "Git", "PHP", "Laravel", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery"],
+        "link": "https://transporteyucatan.org.mx/"
+      },
+      {
+        "id": 102,
+        "titulo": "Módulo de Credencialización",
+        "cliente": "Institución Gubernamental",
+        "periodo": "Sep 2024 - Mar 2025",
+        "descripcion": "Arquitectura de alto rendimiento para emisión masiva. Desarrollo de motor de renderizado nativo en PHP para generación de PDFs dinámicos sin cuellos de botella.",
+        "stack": ["Linux", "Apache", "Git", "Docker", "PostgreSQL", "PHP", "Phalcon API", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery"],
+        "link": "https://tramites.transporteyucatan.org.mx/"
+      },
+      {
+        "id": 103,
+        "titulo": "Arquitectura Desacoplada (API REST)",
+        "cliente": "Institución Gubernamental",
+        "periodo": "Sep 2024 - Mar 2025",
+        "descripcion": "Refactorización de monolito a servicios. Desacoplamiento del Frontend mediante Vue.js y estandarización de entornos de desarrollo con Docker.",
+        "stack": ["Linux", "Apache", "Git", "Docker", "PostgreSQL", "PHP", "Phalcon API", "HTML", "CSS", "JavaScript", "Vue.js"],
+        "link": null
+      },
+      {
+        "id": 104,
+        "titulo": "Sistema de Declaraciones",
+        "cliente": "Institución Gubernamental",
+        "periodo": "Sep 2024 - Mar 2025",
+        "descripcion": "Estabilización de sistema crítico legacy. Diagnóstico de fugas de memoria y refactorización de consultas SQL complejas para garantizar integridad de datos.",
+        "stack": ["Linux", "Apache", "Git", "MySQL", "PHP", "Laravel", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery"],
+        "link": null
+      }
+    ]
   },
   {
-    "id": 102,
-    "grupo": "aty",
-    "titulo": "Módulo de Credencialización",
-    "cliente": "Institución Gubernamental",
-    "periodo": "Sep 2024 - Mar 2025",
-    "descripcion": "Sistema optimizado para emisión masiva de credenciales virtuales. Uso de Vistas Nativas PHP para máximo rendimiento.",
-    "stack": ["Linux", "Apache", "Git", "Docker", "PostgreSQL", "PHP", "Phalcon API", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery"],
-    "link": "https://tramites.transporteyucatan.org.mx/",
-    "fecha_inicio": "2024-09-01",
-    "name": "credencializacion ATY"
-  },
-  {
-    "id": 103,
-    "grupo": "aty",
-    "titulo": "Arquitectura Desacoplada via API REST",
-    "cliente": "Institución Gubernamental",
-    "periodo": "Sep 2024 - Mar 2025",
-    "descripcion": "Reingeniería de servicios internos mediante API REST. Orquestación con Docker para estandarizar entornos de desarrollo.",
-    "stack": ["Linux", "Apache", "Git", "Docker", "PostgreSQL", "PHP", "Phalcon API", "HTML", "CSS", "JavaScript", "Vue.js"],
-    "link": null,
-    "fecha_inicio": "2024-09-01",
-    "name": "egito ATY"
-  },
-  {
-    "id": 104,
-    "grupo": "aty",
-    "titulo": "Sistema de Declaraciones",
-    "cliente": "Institución Gubernamental",
-    "periodo": "Sep 2024 - Mar 2025",
-    "descripcion": "Mantenimiento correctivo y estabilización de sistema crítico de declaraciones patrimoniales.",
-    "stack": ["Linux", "Apache", "Git", "MySQL", "PHP", "Laravel", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery"],
-    "link": null,
-    "fecha_inicio": "2024-09-01",
-    "name": "declaraciones ATY"
-  },
-  {
-    "id": 1,
-    "grupo": "freelance",
-    "titulo": "Visualizador de Algoritmos",
-    "cliente": "Proyecto Académico",
-    "periodo": "Oct 2025 - Nov 2025",
-    "descripcion": "SPA interactiva para visualizar algoritmos de grafos (BFS/DFS).",
-    "stack": ["Git", "JavaScript", "React", "HTML", "CSS", "Vite"],
-    "link": "https://gasparcardos.github.io/grafos/",
-    "fecha_inicio": "2025-10-01",
-    "name": "visualizador de algoritmos"
-  },
-  {
-    "id": 2,
-    "grupo": "freelance",
-    "titulo": "Catálogo Digital (E-commerce)",
-    "cliente": "Comercio Local (Pyme)",
-    "periodo": "Ene 2025 - Mar 2025",
-    "descripcion": "Prototipo funcional de plataforma de pedidos en línea con carrito de compras.",
-    "stack": ["Linux", "Apache", "Git", "PostgreSQL", "PHP", "Phalcon", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery"],
-    "link": null,
-    "fecha_inicio": "2025-01-01",
-    "name": "xtabay"
-  },
-  {
-    "id": 3,
-    "grupo": "freelance",
-    "titulo": "ERP de Operaciones Energéticas",
-    "cliente": "Empresa de Energías Renovables",
-    "periodo": "Ago 2023 - Mar 2025",
-    "descripcion": "Gestión en tiempo real de cuadrillas, flota vehicular y órdenes de trabajo.",
-    "stack": ["Linux", "Apache", "Git", "PostgreSQL", "PHP", "Phalcon", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery", "Google Maps API"],
-    "link": null,
-    "fecha_inicio": "2023-08-01",
-    "name": "roburlatam"
-  },
-  {
-    "id": 4,
-    "grupo": "freelance",
-    "titulo": "Inteligencia Territorial y SIG",
-    "cliente": "Consultoría Estratégica",
-    "periodo": "Ago 2023 - Jun 2024",
-    "descripcion": "Manejo de estructuras jerárquicas recursivas y cartografía digital para logística y distribución estratégica.",
-    "stack": ["Linux", "Apache", "Git", "PostgreSQL", "PHP", "Phalcon", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery", "Google Maps API"],
-    "link": null,
-    "fecha_inicio": "2023-08-01",
-    "name": "rb2024"
-  },
-  {
-    "id": 5,
-    "grupo": "freelance",
-    "titulo": "ERP de Inventarios y Ventas",
-    "cliente": "Empresa de Cosméticos",
-    "periodo": "Ene 2022 - Dic 2024",
-    "descripcion": "Control masivo de stock, múltiples almacenes, sucursales y fuerza de ventas.",
-    "stack": ["Linux", "Apache", "Git", "PostgreSQL", "PHP", "Phalcon", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery"],
-    "link": null,
-    "fecha_inicio": "2022-01-01",
-    "name": "dabalash"
-  },
-  {
-    "id": 6,
-    "grupo": "freelance",
-    "titulo": "Gestión de Servicios Públicos",
-    "cliente": "Empresa de Recolección de Residuos Sólidos",
-    "periodo": "Ene 2022 - Dic 2022",
-    "descripcion": "ERP para gestión de recolección de residuos sólidos, rutas y flotillas.",
-    "stack": ["Linux", "Apache", "Git", "PostgreSQL", "PHP", "Phalcon", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery"],
-    "link": null,
-    "fecha_inicio": "2022-01-01",
-    "name": "pamplonawp"
-  },
-  {
-    "id": 7,
-    "grupo": "freelance",
-    "titulo": "Portal de Pagos Online",
-    "cliente": "Empresa de Recolección de Residuos Sólidos",
-    "periodo": "Ene 2022 - Ago 2022",
-    "descripcion": "Consulta de adeudos y pagos ciudadanos con integración bancaria.",
-    "stack": ["Linux", "Apache", "Git", "PostgreSQL", "PHP", "Phalcon", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery", "PayPal API"],
-    "link": "http://www.pamplona.com.mx/",
-    "fecha_inicio": "2022-01-01",
-    "name": "pamplona"
-  },
-  {
-    "id": 8,
-    "grupo": "freelance",
-    "titulo": "Gestión Fintech",
-    "cliente": "Empresa de Préstamos",
-    "periodo": "Ene 2021 - Mar 2025",
-    "descripcion": "Gestión de Cobranza, notificaciones y cálculo de intereses.",
-    "stack": ["Linux", "Apache", "Git", "PostgreSQL", "PHP", "Phalcon", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery"],
-    "link": null,
-    "fecha_inicio": "2021-01-01",
-    "name": "sisconde"
-  },
-  {
-    "id": 9,
-    "grupo": "freelance",
-    "titulo": "Gestión Estructural y Logística Masiva",
-    "cliente": "Consultoría Estratégica",
-    "periodo": "Ene 2020 - Jul 2021",
-    "descripcion": "Sistema de gestión de recursos humanos y coordinación logística de eventos.",
-    "stack": ["Linux", "Apache", "Git", "PostgreSQL", "PHP", "Phalcon", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery", "Google Maps API"],
-    "link": null,
-    "fecha_inicio": "2020-01-01",
-    "name": "rb2021"
-  },
-  {
-    "id": 10,
-    "grupo": "freelance",
-    "titulo": "Catálogo Digital de Árboles Urbanos",
-    "cliente": "Institución Gubernamental",
-    "periodo": "Ene 2020 - Sep 2020",
-    "descripcion": "Sistema especializado para el censo, gestión y monitoreo del arbolado urbano y espacios verdes.",
-    "stack": ["Linux", "Apache", "Git", "PostgreSQL", "PHP", "Laravel", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery"],
-    "link": null,
-    "fecha_inicio": "2020-01-01",
-    "name": "arbolmid"
-  },
-  {
-    "id": 11,
-    "grupo": "freelance",
-    "titulo": "Logística de Eventos Georreferenciados",
-    "cliente": "Organización de Eventos",
-    "periodo": "Ago 2019 - Ene 2020",
-    "descripcion": "Plataforma para gestión de ubicaciones y logística de eventos en mapa interactivo.",
-    "stack": ["Linux", "Apache", "Git", "PostgreSQL", "PHP", "Phalcon", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery", "Google Maps API"],
-    "link": null,
-    "fecha_inicio": "2019-08-01",
-    "name": "rompiendo"
+    "id": "freelance",
+    "titulo_seccion": "Freelance & Consultoría",
+    "proyectos": [
+      {
+        "id": 1,
+        "titulo": "Visualizador de Algoritmos",
+        "cliente": "Open Source / Académico",
+        "periodo": "Oct 2025 - Nov 2025",
+        "descripcion": "SPA interactiva educativa. Implementación visual de recorridos de Grafos (BFS/DFS) manipulando el DOM virtual de React en tiempo real.",
+        "stack": ["Git", "JavaScript", "React", "HTML", "CSS", "Vite"],
+        "link": "https://gasparcardos.github.io/grafos/"
+      },
+      {
+        "id": 2,
+        "titulo": "Catálogo Digital (E-commerce)",
+        "cliente": "Comercio Local (Pyme)",
+        "periodo": "Ene 2025 - Mar 2025",
+        "descripcion": "Plataforma B2C optimizada para conversión. Diseño de base de datos relacional para gestión de inventarios y carrito de compras persistente.",
+        "stack": ["Linux", "Apache", "Git", "PostgreSQL", "PHP", "Phalcon", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery"],
+        "link": null
+      },
+      {
+        "id": 3,
+        "titulo": "ERP de Operaciones Energéticas",
+        "cliente": "Empresa de Energías Renovables",
+        "periodo": "Ago 2023 - Mar 2025",
+        "descripcion": "Sistema de misión crítica. Sincronización en tiempo real de cuadrillas y flota vehicular mediante integración con Google Maps API.",
+        "stack": ["Linux", "Apache", "Git", "PostgreSQL", "PHP", "Phalcon", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery", "Google Maps API"],
+        "link": null
+      },
+      {
+        "id": 4,
+        "titulo": "Inteligencia Territorial y SIG",
+        "cliente": "Consultoría Estratégica",
+        "periodo": "Ago 2023 - Jun 2024",
+        "descripcion": "Algoritmos recursivos para estructuras jerárquicas multinivel. Visualización de big data en mapas interactivos para logística.",
+        "stack": ["Linux", "Apache", "Git", "PostgreSQL", "PHP", "Phalcon", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery", "Google Maps API"],
+        "link": null
+      },
+      {
+        "id": 5,
+        "titulo": "ERP de Inventarios y Ventas",
+        "cliente": "Empresa de Cosméticos",
+        "periodo": "Ene 2022 - Dic 2024",
+        "descripcion": "Arquitectura multi-tenant para control de stock distribuido. Gestión de almacenes simultáneos y reportes financieros automatizados.",
+        "stack": ["Linux", "Apache", "Git", "PostgreSQL", "PHP", "Phalcon", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery"],
+        "link": null
+      },
+      {
+        "id": 6,
+        "titulo": "Gestión de Servicios Públicos",
+        "cliente": "Empresa de Recolección",
+        "periodo": "Ene 2022 - Dic 2022",
+        "descripcion": "Digitalización operativa. ERP para la trazabilidad de rutas de recolección y mantenimiento preventivo de flotillas pesadas.",
+        "stack": ["Linux", "Apache", "Git", "PostgreSQL", "PHP", "Phalcon", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery"],
+        "link": null
+      },
+      {
+        "id": 7,
+        "titulo": "Portal de Pagos Online",
+        "cliente": "Empresa de Servicios",
+        "periodo": "Ene 2022 - Ago 2022",
+        "descripcion": "Pasarela de pagos segura. Integración con API bancaria y PayPal para conciliación automática de adeudos ciudadanos.",
+        "stack": ["Linux", "Apache", "Git", "PostgreSQL", "PHP", "Phalcon", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery", "PayPal API"],
+        "link": "http://www.pamplona.com.mx/"
+      },
+      {
+        "id": 8,
+        "titulo": "Gestión Fintech",
+        "cliente": "Empresa de Préstamos",
+        "periodo": "Ene 2021 - Mar 2025",
+        "descripcion": "Motor de cálculo financiero. Automatización de interés compuesto, amortizaciones y sistema de notificaciones de cobranza.",
+        "stack": ["Linux", "Apache", "Git", "PostgreSQL", "PHP", "Phalcon", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery"],
+        "link": null
+      },
+      {
+        "id": 9,
+        "titulo": "Gestión Estructural y Logística",
+        "cliente": "Consultoría Estratégica",
+        "periodo": "Ene 2020 - Jul 2021",
+        "descripcion": "Administración de RRHH masiva. Optimización de coordinación logística para eventos mediante asignación inteligente de personal.",
+        "stack": ["Linux", "Apache", "Git", "PostgreSQL", "PHP", "Phalcon", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery", "Google Maps API"],
+        "link": null
+      },
+      {
+        "id": 10,
+        "titulo": "Catálogo de Árboles Urbanos",
+        "cliente": "Institución Gubernamental",
+        "periodo": "Ene 2020 - Sep 2020",
+        "descripcion": "Plataforma de monitoreo ambiental. CRUD complejo para taxonomía biológica y geolocalización de espacios verdes.",
+        "stack": ["Linux", "Apache", "Git", "PostgreSQL", "PHP", "Laravel", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery"],
+        "link": null
+      },
+      {
+        "id": 11,
+        "titulo": "Logística Georreferenciada",
+        "cliente": "Organización de Eventos",
+        "periodo": "Ago 2019 - Ene 2020",
+        "descripcion": "Herramienta de planificación visual. Gestión de pines y polígonos en mapas interactivos para distribución de layouts.",
+        "stack": ["Linux", "Apache", "Git", "PostgreSQL", "PHP", "Phalcon", "HTML", "CSS", "JavaScript", "Bootstrap", "jQuery", "Google Maps API"],
+        "link": null
+      }
+    ]
   }
 ]
